--- a/app/src/main/res/layout/scrolling_escuderia.xml
+++ b/app/src/main/res/layout/scrolling_escuderia.xml
@@ -21,12 +21,11 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ftEscuderia"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="205dp"
+            android:layout_height="134dp"
             android:contentDescription="@string/fotoEscuderia"
-            app:srcCompat="@mipmap/ic_launcher"
-            android:scaleType="centerCrop"
-            app:shapeAppearanceOverlay="@style/roundedImageView" />
+            android:scaleType="fitXY"
+            app:srcCompat="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/txNacionalidadEscuderia"
