--- a/app/src/main/res/layout/scrolling_piloto.xml
+++ b/app/src/main/res/layout/scrolling_piloto.xml
@@ -264,15 +264,15 @@
                     android:gravity="center"/>
 
                 <TextView
-                    android:id="@+id/txTituloMejorPosicion"
+                    android:id="@+id/txTituloNumEquipos"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/mejorPosicion"
+                    android:text="@string/numeroEquipos"
                     android:textAlignment="center"
                     android:textColor="@color/white"/>
 
                 <TextView
-                    android:id="@+id/txMejorPosicionPiloto"
+                    android:id="@+id/txMejorNumEquipos"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="-"
