--- a/app/src/main/res/layout/fragment_temporada_piloto.xml
+++ b/app/src/main/res/layout/fragment_temporada_piloto.xml
@@ -15,8 +15,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_marginRight="30dp"
-            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginLeft="30dp"
             >
 
             <TextView
@@ -32,14 +32,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="-"
-                android:gravity="center"/>
+                android:gravity="center"
+                />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="25dp"
             android:orientation="vertical">
 
             <TextView
@@ -54,7 +55,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="-" />
+                android:text="-"
+                android:singleLine="false"
+                android:maxWidth="20dp"/>
 
         </LinearLayout>
 
@@ -62,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="25dp"
             >
 
             <TextView
