12/11/2023 - Carlos - Introduccion de gráficos

--- a/app/src/main/res/layout/fragment_temporada_piloto.xml
+++ b/app/src/main/res/layout/fragment_temporada_piloto.xml
@@ -7,6 +7,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         >
@@ -104,6 +108,12 @@
                 android:text="-"
                 android:gravity="center"/>
         </LinearLayout>
+    </LinearLayout>
+    
+    <com.github.mikephil.charting.charts.LineChart
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:id="@+id/lineChartPuntosPiloto"/>
     </LinearLayout>
 
 </FrameLayout>
