--- a/app/src/main/res/layout/fragment_temporada_piloto.xml
+++ b/app/src/main/res/layout/fragment_temporada_piloto.xml
@@ -9,111 +9,135 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        >
 
+        <TextView
+            android:id="@+id/txTemporadaActual"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text="@string/TemporadaActual"
+            android:gravity="center"
+            android:drawableLeft="@drawable/linea"
+            android:drawableRight="@drawable/linea"
+            android:textColor="@color/white"
+            />
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginRight="25dp"
-            android:layout_marginLeft="30dp"
+            android:orientation="horizontal"
             >
 
-            <TextView
-                android:id="@+id/txTituloPosicionPiloto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/posicionPiloto"
-                android:textColor="@color/white"
-                />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginRight="25dp"
+                android:layout_marginLeft="30dp"
+                >
 
-            <TextView
-                android:id="@+id/txPosicionPiloto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="-"
-                android:gravity="center"
-                />
+                <TextView
+                    android:id="@+id/txTituloPosicionPiloto"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/posicionPiloto"
+                    android:textColor="@color/white"
+                    />
 
+                <TextView
+                    android:id="@+id/txPosicionPiloto"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="-"
+                    android:gravity="center"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="25dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/txTituloEscuderiaPilotoTemporada"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pilotoEscudería"
+                    android:textColor="@color/white"/>
+
+                <TextView
+                    android:id="@+id/txEscuderiaPilotoTemporada"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="-"
+                    android:singleLine="false"
+                    android:maxWidth="20dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginRight="25dp"
+                >
+
+                <TextView
+                    android:id="@+id/txTituloVictoriasPilotoTemporada"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/victoriasEscudería"
+                    android:textColor="@color/white"/>
+
+                <TextView
+                    android:id="@+id/txVictoriasPilotoTemporada"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="-"
+                    android:gravity="center"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                >
+
+                <TextView
+                    android:id="@+id/txTituloPuntosPilotoTemporada"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/puntosPilotototal"
+                    android:textColor="@color/white"/>
+
+                <TextView
+                    android:id="@+id/txPuntosPilotoTemporada"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="-"
+                    android:gravity="center"/>
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="25dp"
-            android:orientation="vertical">
+        <TextView
+            android:id="@+id/txGraficoPuntosTemp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/graficoPuntosTemp"
+            android:gravity="center"
+            android:drawableLeft="@drawable/linea"
+            android:drawableRight="@drawable/linea"
+            android:textColor="@color/white"
+            />
 
-            <TextView
-                android:id="@+id/txTituloEscuderiaPilotoTemporada"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/pilotoEscudería"
-                android:textColor="@color/white"/>
+        <com.github.mikephil.charting.charts.LineChart
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:id="@+id/lineChartPuntosPiloto"/>
 
-            <TextView
-                android:id="@+id/txEscuderiaPilotoTemporada"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="-"
-                android:singleLine="false"
-                android:maxWidth="20dp"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginRight="25dp"
-            >
-
-            <TextView
-                android:id="@+id/txTituloVictoriasPilotoTemporada"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/victoriasEscudería"
-                android:textColor="@color/white"/>
-
-            <TextView
-                android:id="@+id/txVictoriasPilotoTemporada"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="-"
-                android:gravity="center"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
-
-            <TextView
-                android:id="@+id/txTituloPuntosPilotoTemporada"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/puntosPilotototal"
-                android:textColor="@color/white"/>
-
-            <TextView
-                android:id="@+id/txPuntosPilotoTemporada"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="-"
-                android:gravity="center"/>
-        </LinearLayout>
-    </LinearLayout>
-    
-    <com.github.mikephil.charting.charts.LineChart
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:id="@+id/lineChartPuntosPiloto"/>
     </LinearLayout>
 
 </FrameLayout>
