--- a/app/src/main/res/layout/scrolling_escuderia.xml
+++ b/app/src/main/res/layout/scrolling_escuderia.xml
@@ -270,6 +270,12 @@
 
         </LinearLayout>
 
+        <FrameLayout
+            android:id="@+id/layoutTemporadaEscuderia"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
 
     </LinearLayout>
 
