--- a/app/src/main/res/layout/scrolling_carrera.xml
+++ b/app/src/main/res/layout/scrolling_carrera.xml
@@ -140,6 +140,34 @@
                     android:text="TextView"
                     android:textColor="@color/white" />
             </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/txVideoCarrera"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/linea"
+            android:drawableRight="@drawable/linea"
+            android:gravity="center"
+            android:text="@string/momentos_carrera"
+            android:textColor="@color/white" />
+
+        <LinearLayout
+            android:id="@+id/layoutVideo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+                android:id="@+id/youtube_player_view"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_centerInParent="true"
+                android:background="@color/black"
+                android:layout_margin="16dp" />
+
         </LinearLayout>
 
         <TextView
