--- a/app/src/main/res/layout/toolbar_piloto.xml
+++ b/app/src/main/res/layout/toolbar_piloto.xml
@@ -1,11 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorUno"
-    app:title="@string/toolbar"
-    app:titleTextColor="#FFFFFF"
     >
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:id="@+id/tituloToolbarPiloto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:layout_marginTop="8dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="end"
+            >
+            <!-- Botón a la derecha -->
+            <Button
+                android:id="@+id/btnSeleccionarTemporada"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2023"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:drawableEnd="@drawable/ic_arrow_down"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
+
 
 </androidx.appcompat.widget.Toolbar>
