28/11/2023 - Carlos - Creado nuevo fragment comparativa

--- a/app/src/main/res/menu/botton_navigation_menu.xml
+++ b/app/src/main/res/menu/botton_navigation_menu.xml
@@ -14,4 +14,9 @@
         android:id="@+id/escuderiasFragment"
         android:icon="@drawable/herramientas"
         android:title="Constructores" />
+
+    <item
+        android:id="@+id/comparativaFragment"
+        android:icon="@drawable/versus"
+        android:title="Comparativa" />
 </menu>
