03/12/2023 - Carlos - Primera versión del diseño del fragment_comparativa.xml

--- a/app/src/main/res/layout/fragment_comparativa.xml
+++ b/app/src/main/res/layout/fragment_comparativa.xml
@@ -3,8 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ComparativaFragment">
+    tools:context=".ComparativaFragment"
+    android:layout_marginTop="60dp"
+    android:layout_marginBottom="70dp">
 
-
+    <include layout="@layout/scrolling_comparativa"
+        android:id="@+id/layoutComparativaPiloto"
+        />
 
 </FrameLayout>
