--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,5 +8,14 @@
     app:title="@string/toolbar"
     app:titleTextColor="#FFFFFF"
     >
+
+    <Button
+        android:id="@+id/btnExportarCSV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="80dp"
+        android:text="@string/export_csv"
+        android:textColor="@color/white"
+        android:visibility="visible" />
 
 </androidx.appcompat.widget.Toolbar>
