Funcionalidad de varias temporadas

--- a/app/src/main/res/layout/activity_escuderia_details.xml
+++ b/app/src/main/res/layout/activity_escuderia_details.xml
@@ -9,7 +9,7 @@
 
     <include
         android:id="@+id/toolbarEscuderia"
-        layout="@layout/toolbar_piloto"
+        layout="@layout/toolbar_spinner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
