--- a/app/src/main/res/layout/activity_piloto_details.xml
+++ b/app/src/main/res/layout/activity_piloto_details.xml
@@ -10,7 +10,7 @@
 
     <include
         android:id="@+id/toolbarPiloto"
-        layout="@layout/toolbar_piloto"
+        layout="@layout/toolbar_spinner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
