--- a/app/src/main/res/layout/fragment_comparativa.xml
+++ b/app/src/main/res/layout/fragment_comparativa.xml
@@ -38,13 +38,12 @@
                 android:id="@+id/ftComparativaPiloto1"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
                 android:contentDescription="@string/fotoPiloto"
                 android:scaleType="centerCrop"
-                app:shapeAppearanceOverlay="@style/roundedImageView"
-                app:srcCompat="@mipmap/ic_launcher"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"/>
+                app:shapeAppearanceOverlay="@style/roundedImageView" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -155,13 +154,12 @@
             android:id="@+id/ftComparativaPiloto2"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
             android:contentDescription="@string/fotoPiloto"
             android:scaleType="centerCrop"
-            app:shapeAppearanceOverlay="@style/roundedImageView"
-            app:srcCompat="@mipmap/ic_launcher"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
+            app:shapeAppearanceOverlay="@style/roundedImageView" />
 
         <LinearLayout
             android:layout_width="match_parent"
