--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -9,13 +9,54 @@
     app:titleTextColor="#FFFFFF"
     >
 
-    <Button
-        android:id="@+id/btnExportarCSV"
-        android:layout_width="wrap_content"
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="80dp"
-        android:text="@string/export_csv"
-        android:textColor="@color/white"
-        android:visibility="visible" />
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:id="@+id/tituloToolbarPiloto"
+            android:layout_width="wrap_content"
+            android:layout_height="42dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/calendario_gp"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="end"
+            >
+            <!-- Botón a la derecha -->
+
+
+            <Button
+                android:id="@+id/btnExportarCSV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="@string/export_csv"
+                android:textColor="@color/white"
+                android:visibility="visible" />
+
+            <Button
+                android:id="@+id/btnSeleccionarTemporada"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_arrow_down"
+                android:text="2023"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:visibility="visible" />
+        </LinearLayout>
+
+    </LinearLayout>
+
 
 </androidx.appcompat.widget.Toolbar>
