--- a/app/src/main/res/layout/activity_comparativa_pilotos.xml
+++ b/app/src/main/res/layout/activity_comparativa_pilotos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ComparativaPilotos"
+    tools:context=".vista.comparativa.ComparativaPilotos"
     android:id="@+id/layoutComparativaPilotos">
 
     <include
