--- a/app/src/main/res/layout/activity_piloto_details.xml
+++ b/app/src/main/res/layout/activity_piloto_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PilotoDetails"
+    tools:context=".vista.pilotos.PilotoDetails"
     android:id="@+id/layoutDetallesPiloto">
 
 
