--- a/app/src/main/res/layout/fragment_carreras.xml
+++ b/app/src/main/res/layout/fragment_carreras.xml
@@ -169,7 +169,7 @@
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="70dp"
-            tools:context=".CarrerasFragment">
+            tools:context=".vista.carreras.CarrerasFragment">
 
 
             <androidx.recyclerview.widget.RecyclerView
