--- a/app/src/main/res/layout/fragment_comparativa.xml
+++ b/app/src/main/res/layout/fragment_comparativa.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ComparativaFragment"
+    tools:context=".vista.comparativa.ComparativaFragment"
     android:layout_marginTop="60dp"
     android:layout_marginBottom="70dp">
 
