--- a/app/src/main/res/layout/scrolling_piloto.xml
+++ b/app/src/main/res/layout/scrolling_piloto.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".PilotoDetails"
+    tools:context=".vista.pilotos.PilotoDetails"
     tools:showIn="@layout/activity_piloto_details"
     android:background="@drawable/fondo_degradado"
     android:layout_marginTop="50dp">
