--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/backgroundColorMenu"
     app:title="@string/toolbar"
-    app:titleTextColor="#FFFFFF"
-    >
+    app:titleTextColor="#FFFFFF">
 
     <Button
         android:id="@+id/btnExportarCSV"
